--- a/src/App.scss
+++ b/src/App.scss
@@ -8,16 +8,64 @@ body {
   background-attachment: fixed;
   background-position: contain;
   background-image: url('./img/bg-water.jpg');
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  margin: 0;
+  padding: 0;
+}
+
+.header {
+  background-color: #04486f;
+  border-bottom: 1px solid #034d79;
+  box-shadow: 0px 5px 5px 1px rgba(0, 0, 0, 0.25);
+  color: #fff;
+  left: 0;
+  margin: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.header__container {
+  align-items: center;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.header__logo {
+  border-bottom: 2px solid #fff;
+  font-family: 'Fira Sans', sans-serif;
+  font-size: 4.2rem;
+  font-variant: small-caps;
+  font-weight: 500;
+  margin-left: -12px;
+  padding: 0 25px;
+  text-transform: uppercase;
+}
+
+.header__sortbox {
+  background-color: #065686;
+  font-size: 1.6rem;
+  font-weight: bold;
+  padding: 15px;
+  text-transform: uppercase;
+}
+
+.header__sortbox__select {
+  background-color:#126CA2;
+  color: #fff;
+  font-size: 16px;
+  font-weight: bold;
+  margin-left: 25px;
+}
+
+.header__sortbox__select option {
+  background-color:#126CA2;
+  color: #fff;
+  font-weight: bold;
 }
 
 .fish__grid {
-  display: grid;
-  grid-template-columns: auto auto auto;
-  grid-column-gap: 100px;
-  grid-row-gap: 100px;
-  align-items: top;
-  justify-items: center;
-  margin: 0 3%;
+  margin: 200px auto;
   padding: 0;
 }
 
@@ -25,6 +73,7 @@ body {
   background-color: #fff;
   border-radius: 10px;
   width: 350px;
+  margin: 25px auto;
 }
 
 .card__bg {
@@ -57,4 +106,26 @@ body {
   font-size: 1.8rem;
   font-weight: 400;
   line-height: 1.6;
+}
+
+@media only screen and (min-width: 800px) {
+  .fish__grid {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-column-gap: 50px;
+    grid-row-gap: 50px;
+    align-items: top;
+    justify-items: center;
+  }
+
+  .card {
+    margin: 0;
+  }
+
+  @media only screen and (min-width: 1000px) { 
+  
+    .fish__grid {
+      grid-template-columns: auto auto auto;
+    }
+  }
 }
